# lsdyna-mesh-reader

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: testing-and-deployment.yml
_autosummary/: lsdyna_mesh_reader.Deck.html  lsdyna_mesh_reader._deck.ElementShellSection.html  lsdyna_mesh_reader._deck.ElementSolidSection.html  lsdyna_mesh_reader._deck.NodeSection.html  lsdyna_mesh_reader.examples.html
_autosummary/_autosummary/: lsdyna_mesh_reader.Deck.element_shell_sections.html  lsdyna_mesh_reader.Deck.element_solid_sections.html  lsdyna_mesh_reader.Deck.node_sections.html  lsdyna_mesh_reader.Deck.overwrite_node_section.html  lsdyna_mesh_reader.Deck.to_grid.html  lsdyna_mesh_reader._deck.ElementShellSection.eid.html  lsdyna_mesh_reader._deck.ElementShellSection.node_id_offsets.html  lsdyna_mesh_reader._deck.ElementShellSection.node_ids.html  lsdyna_mesh_reader._deck.ElementShellSection.pid.html  lsdyna_mesh_reader._deck.ElementShellSection.to_vtk.html  lsdyna_mesh_reader._deck.ElementSolidSection.eid.html  lsdyna_mesh_reader._deck.ElementSolidSection.node_id_offsets.html  lsdyna_mesh_reader._deck.ElementSolidSection.node_ids.html  lsdyna_mesh_reader._deck.ElementSolidSection.pid.html  lsdyna_mesh_reader._deck.ElementSolidSection.to_vtk.html  lsdyna_mesh_reader._deck.NodeSection.coordinates.html  lsdyna_mesh_reader._deck.NodeSection.fpos.html  lsdyna_mesh_reader._deck.NodeSection.nid.html  lsdyna_mesh_reader._deck.NodeSection.rc.html  lsdyna_mesh_reader._deck.NodeSection.tc.html
_sources/: api.rst.txt  index.md.txt
_sources/_autosummary/: lsdyna_mesh_reader.Deck.rst.txt  lsdyna_mesh_reader._deck.ElementShellSection.rst.txt  lsdyna_mesh_reader._deck.ElementSolidSection.rst.txt  lsdyna_mesh_reader._deck.NodeSection.rst.txt  lsdyna_mesh_reader.examples.rst.txt
_sources/_autosummary/_autosummary/: lsdyna_mesh_reader.Deck.overwrite_node_section.rst.txt  lsdyna_mesh_reader._deck.ElementSolidSection.node_ids.rst.txt  lsdyna_mesh_reader._deck.ElementSolidSection.pid.rst.txt  lsdyna_mesh_reader._deck.NodeSection.coordinates.rst.txt  lsdyna_mesh_reader._deck.NodeSection.fpos.rst.txt  lsdyna_mesh_reader._deck.NodeSection.nid.rst.txt  lsdyna_mesh_reader._deck.NodeSection.tc.rst.txt
_static/: documentation_options.js
docs/: Makefile
docs/source/: api.rst  conf.py
docs/source/_autosummary/: lsdyna_mesh_reader.Deck.rst  lsdyna_mesh_reader._deck.ElementShellSection.rst  lsdyna_mesh_reader._deck.ElementSolidSection.rst  lsdyna_mesh_reader._deck.NodeSection.rst
docs/source/_autosummary/_autosummary/: lsdyna_mesh_reader.Deck.element_shell_sections.rst  lsdyna_mesh_reader.Deck.element_solid_sections.rst  lsdyna_mesh_reader.Deck.node_sections.rst  lsdyna_mesh_reader.Deck.to_grid.rst  lsdyna_mesh_reader._deck.ElementShellSection.eid.rst  lsdyna_mesh_reader._deck.ElementShellSection.node_id_offsets.rst  lsdyna_mesh_reader._deck.ElementShellSection.node_ids.rst  lsdyna_mesh_reader._deck.ElementShellSection.pid.rst  lsdyna_mesh_reader._deck.NodeSection.rc.rst  (+4 more)
src/: archive.cpp  array_support.h  deck.cpp  reader.cpp  vtk_support.cpp  vtk_support.h
src/lsdyna_mesh_reader/: __init__.py  _deck.pyi  archive.py  deck.py  mesh.py
src/lsdyna_mesh_reader/examples/: EXP_SC_JOINT_SCREW.key  __init__.py  bird.k  birdball.k  bracket.k  ex_13_thick_shell_elform_2.k  wheel.k
tests/: test_deck.py  test_init.py
